--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@
 
             try {
                 // Llamada a la API
-                const response = await fetch('http://localhost:3000/citas', {
+                const response = await fetch('https://tu-codespace-url.github.dev/citas', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
